# LiquidGEMM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
bench/: RESULTS.md  _cutlass_probe.py  accuracy.py  decompose_w4.py  h100_run.sh  microbench.py  rs_bench.py  vllm_serving.py  vllm_smoke.py
csrc/liquid_gemm/: dequant.cu  epilogue.cu  gemv2.cu  torch_bindings.cpp  w4a8_gemm.cu  w4a8_wgmma.cu
liquidgemm/: __init__.py  ops.py  pack.py  quant.py  vllm_plugin.py
tests/: test_kernel_dequant.py  test_kernel_gemm.py  test_quant.py  test_wgmma.py
